# local-llm-stresser

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  install.sh  pyproject.toml  requirements.txt  stresser.py
app/: cli.py  interactive.py
app/benchmarks/: concurrency.py  context_stress.py  decode_speed.py  prefill.py  suite.py  task.py  vision.py  workloads.py
app/core/: client.py  config.py  discovery.py  host_info.py  model_info.py  recorder.py  report.py  runtimes.py  sysmon.py
files/images/: manifest.json
files/prompts/: sample_code.py  sample_large.txt  sample_medium.txt  sample_short.txt  sample_xlarge.txt
scripts/: generate_test_images.py
